--- a/readme
+++ b/readme
@@ -3,4 +3,4 @@ pip install django==1.11.3
 pip install requests
 pip install bs4
 rest of the information please check the views.py inside itscrap folder
-to run this jump go to the itsahala folder and enter "python django runserver"
+to run this jump go to the itsahala folder and enter "python manage.py runserver"
